# bot_platform

./: .gitignore  .start.ps1  .stop.ps1  AGENTS.md  artifact_creator_agent_cli.py  chat_client.py  check-mycroft-scope.ps1  config.py  docker-compose.yml  ideator_chunked_sense_lines.py  ingos_product_agent_cli.py  load_langsmith_report.py  main.py  models.toml  mycroft_agent_cli.py  mycroft_gaz_agent_cli.py  plan.md  prepare_gaz_agent.ps1  prepare_gaz_agent.py  pyproject.toml  read_docx.py  readme.md  requirements.in  requirements.txt  run_bi_agent_cli.py  run_bot.py  runbs.py  runoai.py  services.md  simple_agent_cli.py  simulate_gaz_full_flow.py  simulate_ideator_full_flow.py  simulate_ideator_full_flow_en.py  simulate_ideator_full_flow_text.py  simulate_ismart_task_variator_agent.py  simulate_mycroft_gaz_full_flow.py  simulate_privacy_flow.py  simulate_sales_lead_agent.py  simulate_sales_lead_full_flow.py  simulate_sysadmin_agent_dialog.py  (+16 more)
agents/: __init__.py  agent_loader.py  llm_utils.py  palimpsest_sessions.py  prettifier.py  sql_query_gen.py  store_artifacts.py  structured_prompt_utils.py  user_info.py  utils.py
agents/artifact_creator_agent/: agent.py  prompts.py  state.py  store_artifacts.py  tools.py  utils.py
agents/bi_agent/: __init__.py  bi_agent.py
agents/find_job_agent/: __init__.py  find_job_agent.py
agents/gaz_agent/: __init__.py  agent.py  documents.py  (+11 more)
anonimization/: __init__.py
bot_service/: __init__.py  agent_registry.py  attachments.py  config.py  db.py  initialize_agents.py  load.json  main.py  models.py  schemas.py  service.py  tool_registry.py
gaz/: AGENTS.md  README.md
generators/: __init__.py
openai_proxy/: client.py  config.py  http_logging.py  main.py  schemas.py  utils.py
platform_guardrails/: __init__.py  config.py  context.py  decisions.py  graph_compiler.py  graph_spec.py  injection.py  logging.py  middleware.py  privacy.py  runtime.py  scanners.py  tool_policy.py  tool_registry.py  url_policy.py
platform_tools/: __init__.py  registry.py  tools.json
platform_utils/: __init__.py  llm_logger.py  storage_svc.py
prompts/: ideator.txt  webass.txt
samples/: loader.py
scripts/: _validate_to_cmf.py  build_gaz_index.py  import_gaz_pricing_to_sqlite.py  install_gaz_service_bundle.sh  run_ismart_rerun_skipped_advanced_10_11.ps1  run_ismart_rerun_skipped_advanced_8_9.ps1  run_ismart_rerun_skipped_all.ps1  run_ismart_rerun_skipped_basic_10_11.ps1  run_ismart_rerun_skipped_basic_8_9.ps1  start_gaz.sh
services/: __init__.py  bot_client.py
utils/: __init__.py  translate.py  utils.py
web_chat/: config.py  main.py
(+407 files in other folders)
